--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -81,17 +81,17 @@ Pertanto quello che dobbiamo fare, in pratica, è misurare alcuni valori di $\th
 
 \begin{itemize}
 	\item{Abbiamo scelto di ricavare $\theta$ per il raggio monocromatico di colore verde, quindi di lunghezza d'onda pari a 508 nm. Per il calcolo delle formule (\ref{eq:brutta}) e (\ref{snell}) serve infatti l'indice di rifrazione del materiale. Abbiamo scelto di usare la luce verde e quindi il rispettivo valore di $n$ riportato in Tabella \ref{tab:enne};}
-	\item{Non potendo misurare direttamente l'angolo di incidenza $\theta\ped{i}$ abbiamo misurato l'angolo di riflessione del raggio riflesso (una componente della luce incidente viene riflessa). Abbiamo mirato con il canocchiale col crocifilo la raggio riflesso, e misurato l'angolo. Quindi sapendo che l'angolo di incidenza non è altro che la metà dell'angolo misurato abbiamo trovato $\theta\ped{i}$;}
+	\item{Non potendo misurare direttamente l'angolo di incidenza $\theta\ped{i}$ abbiamo misurato l'angolo di riflessione del raggio riflesso (una componente della luce incidente viene riflessa). Abbiamo mirato con il canocchiale col crocifilo il raggio riflesso, e misurato l'angolo. Quindi sapendo che l'angolo di incidenza non è altro che la metà dell'angolo misurato abbiamo trovato $\theta\ped{i}$;}
 	\item{Quindi per ognuno dei 23 angoli di incidenza misurati, abbiamo preso il corrispettivo valore di $\theta$ allineando il canocchiale con il raggio monocromatico verde uscente al prisma;}
 	\item{Infine confronteremo i $\theta$ sperimentali con i valori trovati grazie alla relazione (\ref{eq:brutta}) e verificheremo se quest'utima è una relazione valida;}
 \end{itemize}
 
-Come si può osservare dal grafico infigura (\ref{fig:dev}) abbimo ottenuto dei datisperimentali che combaciano molto bene con la legge da verificare (\ref{eq:brutta}). Tralasciando due punti, che con molta probabilità non sono stati presi accuratamente come gli altri ci sentiamo di dire che la relazione (\ref{eq:brutta}) che lega $\theta$ con l'angolo di incidenza del raggio luminoso sulla faccia del prisma è verificata.
-
-\begin{figure}[b]
+\begin{figure}[h]
     \includegraphics[width=16cm]{graph.pdf}
     \caption{Il grafico mostra i punti che abbiamo raccolto assieme ad un plot della legge (\ref{eq:brutta}). I dati concordano
     molto bene con la curva teorica, sebbene ci siano due punti errati, sicuramente dovuti ad errori nelle misure. L'errore di
     risoluzione è piccolo e non è mostrato in figura, in quanto le barre d'errore sono invisibili.}
     \label{fig:dev}
 \end{figure}
+
+Come si può osservare dal grafico in Figura \ref{fig:dev}, abbimo ottenuto dei dati sperimentali che combaciano molto bene con la legge (\ref{eq:brutta}) da verificare. Tralasciando i due punti evidenziati nel grafico, che con molta probabilità non sono stati presi accuratamente come gli altri, possiamo dire che la relazione (\ref{eq:brutta}) che lega $\theta$ con l'angolo di incidenza $\theta_i$ del raggio luminoso sulla faccia del prisma è verificata.
