--- a/O2/Latex/Procedimento.tex
+++ b/O2/Latex/Procedimento.tex
@@ -6,23 +6,23 @@ La prima operazione eseguita è stata quella di misurare l'angolo ``zero''. Ovve
 L'angolo ``zero'' quindi ha il seguente valore:
 
 \begin{equation}
-	\theta\ped{0} \,=\, 128^\circ \,31' \pm 1'
+        \theta\ped{0} \,=\, 128^\circ \,31' \pm 1'
 \end{equation} 
 %
 dove abbiamo considerato l'incertezza di risoluzione pari ad un primo anche se il goniometro ha una risoluazione di misura di 30''.
 
 Ora vogliamo osservare la relazione che sussiste tra l'indice di rifrazione del nostro prisma di vetro e la lunghezza d'onda di un raggio luminoso.
 A tal fine occorre ricordare che un raggio luminoso incidente su una faccia di un prisma subisce una riflessione e una rifrazione, poichè passa da un mezzo ad un altro.
-Consideriamo ora cosa accade al raggio rifratto. Poichè il raggio luminoso incidente non è monocromatico questo è composto da numerosi raggi luminosi con lunghezza d'onda differente, in base alla sorgente che emette i raggi. Quando il raggio incidente viaggia attraverso il prisma si scompone nelle sue varie componenti (dispersione della luce) a seconda delle diffrenti lunghezze d'onda che lo compongono. Quindi i raggi monocromatici subiscono un'ulteriore rifrazione passando nuovamente dal vetro all'aria, uscendo pertanto dal prisma. Questa seconda rifrazione non porta altro che ad un'amplificazione dell'effetto precedente, pertanto è più semplice distinguere i vari raggi luminosi.
+Consideriamo ora cosa accade al raggio rifratto. Poichè il raggio luminoso incidente non è monocromatico questo è composto da numerosi raggi luminosi con lunghezza d'onda differente, in base alla sorgente che emette i raggi. Quando il raggio incidente viaggia attraverso il prisma si scompone nelle sue varie componenti (dispersione della luce) a seconda delle diffrenti lunghezze d'onda che lo compongono. Quindi i raggi monocromatici subiscono un'ulteriore rifrazione passando nuovamente dal vetro all'aria, uscendo infine dal prisma. Questa seconda rifrazione non porta altro che ad un'amplificazione dell'effetto precedente, pertanto è più semplice distinguere i vari raggi luminosi.
 
 In questa esperienza noi non siamo in grado di misurare direttamente la lunghezza d'onda di un raggio luminoso. Per superare questo ostacolo si può sfruttare una lampada a gas, che ha la particolarità di emettere luce solo a determinate lunghezze d'onda, in base al tipo di gas nella lampada. Scomponendo con il prisma la luce proveniente dalla lampada a gas (nel nostro caso una lampada al cadmio), si possono osservare i raggi corrispondenti alle lunghezze d'onda che essa emette.
 
-Una volta note le lunghezze d'onda, si può ottenere il valore dell'indice di rifrazione per una specifica lunghezza d'onda misurando l'algolo di deviazione $\theta$, ovvero l'angolo di uscita del raggio rispetto al prolungamento della direzione incidente (si veda Figura \ref{fig:prisma}).
+Note a priori le lunghezze d'onda, si può ottenere il valore dell'indice di rifrazione per una specifica lunghezza d'onda misurando l'algolo di deviazione $\theta\ped{max}$, ovvero l'angolo formato dai prolungamenti dei raggi incidente e di uscita dal prisma (si veda Figura \ref{fig:prisma} per maggiore chiarezza).
 
-Il calcolo si semplifica notevolmente se si adotta la seguente strategia. L'angolo di deviazione $\theta$ varia al variare dell'angolo di incidenza. Si può dimostrare, sia sperimentalmente che teoricamente, che esiste un angolo massimo di deviazione che corrisponde alla configurazione in Figura \ref{fig:prisma}. Si può notare che la configurazione è simmetrica, ovvero l'angolo di incidenza $\theta_i$ è uguale all'angolo di uscita (rispetto alla normale alla superficie). Con semplici considerazioni di geometria, conoscendo l'angolo massimo ($\theta\ped{max}$) di deviazione, si può ricavare l'indice di rifrazione del prisma con la seguente relazione:
+Il calcolo si semplifica notevolmente se si adotta la seguente strategia. L'angolo di deviazione $\theta\ped{max}$ varia al variare dell'angolo di incidenza. Si può dimostrare, sia sperimentalmente che teoricamente, che esiste un angolo massimo di deviazione che corrisponde alla configurazione in Figura \ref{fig:prisma}. Si può notare che la configurazione è simmetrica, ovvero l'angolo di incidenza $\theta_i$ è uguale all'angolo di uscita (rispetto alla normale alla superficie). Con semplici considerazioni geometriche, conoscendo l'angolo massimo $\theta\ped{max}$ di deviazione, si può ricavare l'indice di rifrazione del prisma con la seguente relazione:
 
 \begin{SCfigure}[0.6][t]
-    \includegraphics[width=10cm]{prisma1.pdf}
+    \includegraphics[width=9cm]{prisma1.pdf}
     \caption{Lo schema in figura mostra la configurazione che abbiamo usato per eseguire l'esperimento. Facciamo notare che la configurazione è simmetrica, infatti gli angoli di entrata ed uscita $\theta_i$ sono uguali. Da semplici considerazioni di geometria si può dimostrare che $\alpha = 2r$.}
     \label{fig:prisma}
 \end{SCfigure}
@@ -42,9 +42,7 @@ Questa è la teoria che sta alla base dell'esperienza. Operativamente per misura
 	\item{Quindi per ottenere $\theta\ped{max,\lambda}$ non si deve fare altro che una semplice differenza tra $\theta\ped{\lambda}$ e $\theta\ped{0}$;}
 \end{itemize}
 
-Infine una volta ottenuti i vari valori di $\theta\ped{max,\lambda}$, uno per ciascuno dei raggi monocromatici che siamo stati in grado di distinguere, ne calcoliamo il rispettivo indice di rifrazione sfruttando la relazione (\ref{indice_rif}). I valori che abbiamo ottenuto sono riportati nella seguente tabella (Tabella \label{tab:enne}), nella quale è stato associato al colore del raggio monocromatico la rispettiva lunghezza d'onda.
-
-\input{tabella_enne_gradi.tex}
+Infine una volta ottenuti i vari valori di $\theta\ped{max,\lambda}$, uno per ciascuno dei raggi monocromatici che siamo stati in grado di distinguere, ne calcoliamo il rispettivo indice di rifrazione sfruttando la relazione (\ref{indice_rif}). I valori che abbiamo ottenuto sono riportati nella seguente tabella (Tabella \ref{tab:enne}), nella quale è stato associato al colore del raggio monocromatico la rispettiva lunghezza d'onda.
 
 \begin{figure}[b!]
     \includegraphics[width=16cm]{wave_index.pdf}
@@ -52,13 +50,14 @@ Infine una volta ottenuti i vari valori di $\theta\ped{max,\lambda}$, uno per ci
     \label{fig:wave}
 \end{figure}
 
-Come possiamo notare dai valori tabulati, l'indice di rifrazione per i la luce di colore verde, blu e viola varia solo se si osserva la terza cifra decimale, mentre per le differenti tonalità di rosso occorre quasi la quarta. Invece tra i rossi il verde-viola-blu la differenza si può notare anche esaminando la seconda cifra decimale.
+\input{tabella_enne_gradi.tex}
 
-Queste differenze hanno senso perchè, osservando con il canocchiale la distanza tra le righe dei vari colori, il raggio rosso era sensibilmente più distante dagli altri, come si può notare anche dai rispettivi valori di lunghezza d'onda. Il colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde, blu e viola sono più vicini all'altra estremità dello spettro. Sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria (Rosso 1), poiché le rispettive lunghezze d'onda non sono così marcatamente differenti. Come già notato gli indici di rifrazione delle tre tonalità di rosso sono molto simili, al punto che i valori sono tra di loro compatibili.
+Come possiamo notare dai valori tabulati, l'indice di rifrazione per la luce di colore verde, blu e viola varia solo se si osserva la terza cifra decimale, mentre per le differenti tonalità di rosso occorre quasi la quarta. Invece la differenza tra le sfumature di rosso e i tre colori verde, blu e viola si può notare anche esaminando solo la seconda cifra decimale.
 
-Un altra difficoltà è derivata dal fatto che la lampada al cadmio emette debolmente alle lunghezze d'onda dei rossi 2 e 3, e quindi le righe sono difficilmente visibili.
+Queste differenze hanno senso perchè, osservando con il canocchiale la distanza tra le righe dei vari colori, il raggio rosso era sensibilmente più distante dagli altri, come si può notare anche dai rispettivi valori di lunghezza d'onda. Il colore rosso si trova ad un estremo dello spettro del visibile, mentre i raggi verde, blu e viola sono più vicini all'altra estremità dello spettro. Sperimentalmente abbiamo avuto non poche difficoltà ad individuare le due gradazioni di rosso oltre a quella primaria (Rosso 1), poiché le rispettive lunghezze d'onda non sono così marcatamente differenti e soprattutto poiché l'intensità del raggio luminoso era particolarmente bassa.
+Come già notato gli indici di rifrazione delle tre tonalità di rosso sono molto simili, al punto che i valori sono tra di loro compatibili.
 
-Il grafico in Figura \ref{fig:wave} mostra l'indice di rifrazione in funziona della lunghezza d'onda della luce. È riportato anche l'andamento teorico per il tipo di vetro di cui è costituito il prisma. I dati sono tutti compatibili entro due sigma con la curva teorica.
+Il grafico in Figura \ref{fig:wave} mostra l'indice di rifrazione in funzione della lunghezza d'onda della luce. È riportato anche l'andamento teorico per il tipo di vetro di cui è costituito il prisma. I dati sono tutti compatibili entro due sigma con la curva teorica.
 
 \subsection{Relazione tra angolo di incidenza e di deviazione}
 
@@ -76,8 +75,8 @@ dove $n$ indica l'indice di rifrazione del materiale di cui è fatto il prisma, 
 	 \label{snell}
 \end{equation}
 %
-dove $n\ped{aria}$ rappresenta l'indice di rifrazione dell'aria, che prendiamo uguale a 1, mentre $n$ rappresenta l'indice di rifrazione del materiale di cui è fatto il prisma, che dipende dalla lunghezza d'onda $\lambda$ della luce che colpisce il prisma. Ricordiamo che i valori di $n$ per vari valori di $\lambda$ sono stati ricavati nella prima parte dell'esperienza. Infine $\theta\ped{i}$ rappresenta l'angolo di incidenza del raggio luminoso sulla faccia del prisma.
-Quindi usando la (\ref{snell}) e la (\ref{eq:brutta}), è possibile calcolare l'andolo di deviazione $\theta$ in funzione dell'angolo di incidenza $\theta_i$.
+dove $n\ped{aria}$ rappresenta l'indice di rifrazione dell'aria, che supponiamo uguale a 1, mentre $n$ rappresenta l'indice di rifrazione del materiale di cui è fatto il prisma, che dipende dalla lunghezza d'onda $\lambda$ della luce che colpisce il prisma. Ricordiamo che i valori di $n$ per vari valori di $\lambda$ sono stati ricavati nella prima parte dell'esperienza. Infine $\theta\ped{i}$ rappresenta l'angolo di incidenza del raggio luminoso sulla faccia del prisma.
+Quindi usando la (\ref{snell}) e la (\ref{eq:brutta}), è possibile calcolare l'angolo di deviazione $\theta$ in funzione dell'angolo di incidenza $\theta_i$.
 
 Pertanto quello che dobbiamo fare, in pratica, è misurare alcuni valori di $\theta$ e $\theta\ped{i}$, e verificare che siano in accordo con la teoria. Abbiamo seguito il seguente procedimento:
 
@@ -85,7 +84,7 @@ Pertanto quello che dobbiamo fare, in pratica, è misurare alcuni valori di $\th
 	\item{Abbiamo scelto di ricavare $\theta$ per il raggio monocromatico di colore verde, quindi di lunghezza d'onda pari a 508 nm. Per il calcolo delle formule (\ref{eq:brutta}) e (\ref{snell}) serve infatti l'indice di rifrazione del materiale. Abbiamo scelto di usare la luce verde e quindi il rispettivo valore di $n$ riportato in Tabella \ref{tab:enne};}
 	\item{Non potendo misurare direttamente l'angolo di incidenza $\theta\ped{i}$ abbiamo misurato l'angolo di riflessione del raggio riflesso (una componente della luce incidente viene riflessa). Abbiamo mirato con il canocchiale col crocifilo il raggio riflesso, e misurato l'angolo. Quindi sapendo che l'angolo di incidenza non è altro che la metà dell'angolo misurato abbiamo trovato $\theta\ped{i}$;}
 	\item{Quindi per ognuno dei 23 angoli di incidenza misurati, abbiamo preso il corrispettivo valore di $\theta$ allineando il canocchiale con il raggio monocromatico verde uscente al prisma;}
-	\item{Infine confronteremo i $\theta$ sperimentali con i valori trovati grazie alla relazione (\ref{eq:brutta}) e verificheremo se quest'utima è una relazione valida;}
+	\item{Infine abbiamo confrontato i $\theta$ sperimentali con i valori trovati grazie alla relazione (\ref{eq:brutta}) e verificato se quest'utima è una relazione valida;}
 \end{itemize}
 
 \begin{figure}[h]
@@ -96,4 +95,4 @@ Pertanto quello che dobbiamo fare, in pratica, è misurare alcuni valori di $\th
     \label{fig:dev}
 \end{figure}
 
-Come si può osservare dal grafico in Figura \ref{fig:dev}, abbimo ottenuto dei dati sperimentali che combaciano molto bene con la legge (\ref{eq:brutta}) da verificare. Tralasciando i due punti evidenziati nel grafico, che con molta probabilità non sono stati presi accuratamente come gli altri, possiamo dire che la relazione (\ref{eq:brutta}) che lega $\theta$ con l'angolo di incidenza $\theta_i$ del raggio luminoso sulla faccia del prisma è verificata.
+Come si può osservare dal grafico in Figura \ref{fig:dev}, abbimo ottenuto dei dati sperimentali che combaciano molto bene con la legge (\ref{eq:brutta}) da verificare. Tralasciando i due punti evidenziati nel grafico, che con molta probabilità non sono stati presi accuratamente come gli altri o sono frutto di un errore di trascrizione, possiamo dire che la relazione (\ref{eq:brutta}) che lega $\theta$ con l'angolo di incidenza $\theta_i$ del raggio luminoso sulla faccia del prisma è verificata.
