--- a/O3/Latex/Introduzione.tex
+++ b/O3/Latex/Introduzione.tex
@@ -1,4 +1,9 @@
 \section{Introduzione}
 
-Lo scopo di questa esperienza è quello di misurare l'apertura numerica \emph{NA} di una fibra ottica.
-Riscontrare i problemi relativi alle misure percentuali e all'individuazione/scelta della variabile principale e di quella secondaria. [RIELABORARE PERCHE' COPIATA :D]
+Lo scopo di questa esperienza è quello di misurare l'apertura numerica \emph{NA} di una fibra ottica. L'esperienza serve principalmente a:
+
+\begin{itemize}
+    \item{Rendersi conto della difficoltà di esecuzione di alcune misure, specialmente per fenomeni
+        la cui misura varia sensibilmente con i parametri ambientali e nel tempo.}
+    \item{Mostrare l'importanza della strategia scelta per la misura, in questo caso la scelta della variabile dipendente da misurare.}
+\end{itemize}
