--- a/O3/Latex/Materiale.tex
+++ b/O3/Latex/Materiale.tex
@@ -1,8 +1,9 @@
 \section{Materiale a disposizione}
 
 \begin{itemize}
-	\item{Sorgente laser;}
-    	\item{Fibra ottica;}
-	\item{Misuratore di intensità;}
-	\item{Tavola rotante;}
+    \item{Laser utilizzato come sorgente luminosa.}
+    \item{Fibra ottica di cui misurare l'apertura numerica;}
+	\item{Misuratore di intensità luminosa;}
+	\item{Tavolo di lavoro con supporti, lenti e goniometro. Il goniometro aveva una vite a regolazione micrometrica
+        ci permetteva di misurare angoli con la risoluzione di 15 primi d'arco.}
 \end{itemize}
