--- a/O3/Latex/Analisi.tex
+++ b/O3/Latex/Analisi.tex
@@ -5,7 +5,9 @@ Abbiamo quindi fatto la media dei valori registrati. Dopo questo primo passo ci 
 all'angolo $\vartheta\ped{max}$, ovvero lo abbiamo sottratto a tutti gli altri angoli.
 
 Abbiamo graficato i dati, ottenendo lo spettacolare grafico in Figura XXX-ANAL-GATE-4-PORNO-GAY-XXX, tracciando una linea orrizzontale
-che corrisponde al 5\% dell'intensità massima. Dal grafico abbiamo trovato i punti tra i quali passa la linea corrispondente al 5\%,
+che corrisponde al 5\% dell'intensità massima. Chiaramente la curva interseca due volte la linea del 5\%, poiché è simmetrica.
+Si possono quindi trovare due valori diversi di apertura numerica, e noi li abbiamo calcolati entrambi, come segue.
+Dal grafico abbiamo trovato i punti tra i quali passa la linea corrispondente al 5\%,
 di cui indicheremo con $I\ped{sopra}$, $I\ped{sotto}$ e $\vartheta\ped{sopra}$, $\vartheta\ped{sotto}$ rispettivamente l'intensità e l'angolo.
 A questo punto si può ottenere il valore di \emph{NA} interpolando linermente tra i due punti e imponendo:
 
@@ -21,5 +23,7 @@ Da cui si ha, banalmente:
 \begin{equation}
     \emph{NA} = \frac{\Delta \vartheta}{\Delta I} (0.05 \cdot I\ped{max}) + \vartheta\ped{sopra}
 \end{equation}
+
+I valori che noi abbiamo calcolato sono i seguenti:
 
 
