--- a/O3/Latex/Analisi.tex
+++ b/O3/Latex/Analisi.tex
@@ -4,7 +4,7 @@ Innanzitutto occorre ottenere il valore di intensità massima $I\ped{max}$ e $\v
 Abbiamo quindi fatto la media dei valori registrati. Dopo questo primo passo ci siamo assicurati di esprimere tutti gli angoli rispetto
 all'angolo $\vartheta\ped{max}$, ovvero lo abbiamo sottratto a tutti gli altri angoli.
 
-\begin{wrapfigure}{r}{60mm}
+\begin{wrapfigure}{r}{50mm}
   \begin{center}
     \includegraphics{drawing.pdf}
   \end{center}
@@ -31,5 +31,5 @@ Da cui si ha, banalmente:
 I valori che noi abbiamo calcolato sono i seguenti:
 
 \begin{equation}
-    \emph{NA}_1 = 0.50504 \qquad \emph{NA}_2 = -0.50132
+    \emph{NA}_1 = 0.505 \pm 0.01 \qquad \emph{NA}_2 = -0.5013 \pm 0.007
 \end{equation}
