--- a/O3/Latex/Analisi.tex
+++ b/O3/Latex/Analisi.tex
@@ -1,7 +1,6 @@
 \section{Analisi}
 
-Innanzitutto occorre ottenere il valore di intensità massima $I\ped{max}$ e $\vartheta\ped{max}$, poiché abbiamo misurato tre valori distinti.
-Abbiamo quindi fatto la media dei valori registrati. Dopo questo primo passo ci siamo assicurati di esprimere tutti gli angoli rispetto
+Poiché abbiamo misurato tre valori distinti di intensità massima $I\ped{max}$ e $\vartheta\ped{max}$, occorre innanzitutto ricavarne un unico valore. Abbiamo quindi fatto la media dei valori registrati. Dopo questo primo passo ci siamo assicurati di esprimere tutti gli angoli rispetto
 all'angolo $\vartheta\ped{max}$, ovvero lo abbiamo sottratto a tutti gli altri angoli.
 
 \begin{wrapfigure}{r}{50mm}
@@ -15,7 +14,7 @@ che corrisponde al 5\% dell'intensità massima. Chiaramente la curva interseca d
 Si possono quindi trovare due valori diversi di apertura numerica, e noi li abbiamo calcolati entrambi, come segue.
 Dal grafico abbiamo trovato i punti tra i quali passa la linea corrispondente al 5\%,
 che indicheremo con $P_1$, $P_2$ rispettivamente. $I_1$, $I_2$ e $\vartheta_1$, $\vartheta_2$ indicano rispettivamente le intensità e gli angoli
-relativi ai due punti. A questo punto si può ottenere il valore di \emph{NA} interpolando linermente tra i due punti e imponendo:
+relativi ai due punti. Quindi si può ottenere il valore di \emph{NA} interpolando linermente tra i due punti e imponendo:
 
 \begin{equation}
         0.05 \cdot I\ped{max} = I_1 + (I_2 - I_1) \cdot \frac{\emph{NA} - \vartheta_1}{\vartheta_2 - \vartheta_1} \\
