--- a/O3/Latex/Esperienza.tex
+++ b/O3/Latex/Esperienza.tex
@@ -34,9 +34,9 @@ Da notare che il grafico dell'intensità in funzione dell'angolo ha una forma a 
 scegliere come variabile indipendente l'intensità o l'angolo? Noi abbiamo optato per l'intensità poiché la cima della campana
 ci interessa relativamente poco e poiché dobbiamo essere sicuri di prendere alcuni punti attorno al 5\% dell'intensità massima.
 
-%\begin{figure}[h]
-%    \includegraphics[width=80mm]{grafico.pdf}
-%	\label{In questa figura sono graficati in dati dell'intensità relativa ($I/I\ped{0}$) in funzione del seno dell'angolo ($sen\vartheta$)}
+%\begin{figure}[b]
+    %\includegraphics[width=150mm]{double_plot.pdf}
+	%\caption{In questa figura sono graficati in dati dell'intensità relativa ($I/I\ped{0}$) in funzione del seno dell'angolo ($sen\vartheta$)}
 %\end{figure}
 
 \subsection{Difficoltà nella realizzazione delle misure}
